fixed minor css alignment offset in admin area

--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -754,6 +754,7 @@
   text-decoration: none;
   outline: none;
   transition: background 0.15s ease-in-out;
+  margin-bottom: -1px;
 }
 #fontsampler-admin #fontsampler-menu ul li a:active {
   background: #FFFFFF !important;
